# idiom

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  table_of_contents.html
.github/workflows/: ci.yml
_modules/: idiom.html  index.html
_modules/idiom/: high_dimensional_stats.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: idiom.rst.txt
_sources/module_docs/idiom/: high_dimensional_stats.rst.txt
idiom/: __init__.py  high_dimensional_stats.py  high_dims.py
module_docs/: idiom.html
module_docs/idiom/: high_dimensional_stats.html
