[metadata]
name = idiom
version = 0.0.2
url = https://github.com/thorwhalen/idiom
packages = 
		idiom
include_package_data = True
platforms = any
description_file = README.md
pkg-dir = .
description = Access and operations with word2vec data
license = mit
root_url = https://github.com/thorwhalen/
author = Thor Whalen

[options]
include_package_data = True
zip_safe = False
packages = find:
install_requires = 
	numpy
	scikit-learn
	py2store
	graze

