[metadata]
name = idiom
version = 0.0.4
url = https://github.com/thorwhalen/idiom
platforms = any
description_file = README.md
pkg-dir = .
description = Access and operations with word2vec data
license = mit
root_url = https://github.com/thorwhalen/
author = Thor Whalen

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	numpy
	scikit-learn
	py2store
	graze

